Gap Styling Fixing

--- a/src/app/shared/widgets/kendo-button/kendo-button.component.scss
+++ b/src/app/shared/widgets/kendo-button/kendo-button.component.scss
@@ -1,7 +1,7 @@
 .kendo-action-link {
   align-items: center;
   justify-content: space-around;
-  margin-right: 6px;
+  // margin-right: 6px;
   width: fit-content;
   padding: 10px;
   border-radius: 6px;
