--- a/src/app/shared/widgets/kendo-grid/kendo-grid.component.scss
+++ b/src/app/shared/widgets/kendo-grid/kendo-grid.component.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 10px;
 }
 .fit-content-cell {
   white-space: nowrap;
