--- a/src/app/tasks/components/task-list/task-list.component.scss
+++ b/src/app/tasks/components/task-list/task-list.component.scss
@@ -15,7 +15,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
-  gap: 1rem;
+  gap: 10px;
 }
 
 .search-wrapper {
@@ -24,4 +24,5 @@
 
 .button-wrapper {
   display: flex;
+  gap: 10px;
 }
